# smbt

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  wheels.yml
bindings/: smbt_core.cpp
python/smbt/: __init__.py
src/: Makefile  build.cpp  search.cpp
src/lib/: Makefile  bit_array.cpp  bit_array.hpp  checked_read.hpp  clip2.txt  error.hpp  suc_array.cpp  suc_array.hpp  var_byte.cpp  var_byte.hpp
src/mbt/: Makefile  multibit_tree.cpp  multibit_tree.hpp
src/rsdic/: rsdic.pc.in  wscript
src/rsdic/lib/: Makefile  RSDic.cpp  RSDic.hpp  RSDicTest.cpp  wscript
src/rsdic/tool/: Combination.hpp  CombinationGenerator.cpp  CombinationTest.cpp  PerformanceTest.cpp  wscript
src/smbt_trie/: .#Makefile  Makefile  succinct_multibit_tree_trie.cpp  succinct_multibit_tree_trie.hpp
src/smbt_vla/: Makefile  succinct_multibit_tree_vla.cpp  succinct_multibit_tree_vla.hpp
test/: expected_q200_s090.txt  rsdic_check.cpp  run_regression.sh
tests/: conftest.py  test_errors.py  test_golden.py  test_inmemory_vs_file.py  test_modes_agree.py  test_save_load.py  test_verbose.py
